Adding the dev notes in the last. I believe that these notes will be helpful for future references.